# Setup-Django

./: .dockerignore  .env.example  README.md  manage.py  pyproject.toml
.devcontainer/: docker-compose.yaml  python.Dockerfile
core/: settings.py
core/templates/global/: base.html
